load("//bazel/scala:rules.bzl", "scala_binary", "scala_library")

scala_library(
    name = "package",
    srcs = glob([
        "**/codekata2015/*.scala",
        "**/codekata2015/util/*.scala"
    ],
    exclude = [
        "**/codekata2015/All.scala",
    ]),
    deps = [
        "//common:syntax",
        "@maven//:com_beachape_enumeratum_2_13",
        "@maven//:com_codecommit_gll_combinators_2_13",
        "@maven//:dev_zio_zio_2_13",
        "@maven//:io_circe_circe_core_2_13",
        "@maven//:io_circe_circe_parser_2_13",
        "@maven//:io_carpe_parseback_2_13",
        "@maven//:org_leibnizcenter_probabilistic_earley_parser",
        "@maven//:org_scalanlp_breeze_2_13",
        "@maven//:org_scala_lang_modules_scala_parser_combinators_2_13",
        "@maven//:org_typelevel_cats_core_2_13",
    ],
)

scala_library(
    name = "latest",
    srcs = glob(["**/days/Latest.scala"]),
    deps = [
        ":package",
    ],
)

scala_library(
    name = "solutions",
    srcs = glob(
        ["**/days/*.scala"],
        exclude = [
            "**/days/Latest.scala",
        ],
    ),
    deps = [
        ":package",
    ],
)

scala_binary(
    name = "2015",
    srcs = glob(["**/codekata2015/All.scala"]),
    main_class = "codekata2015.All",
    deps = [
        ":latest",
        ":solutions",
    ]
)