load("//bazel/scala:rules.bzl", "scala_library")

scala_library(
    name = "experimental",
    srcs = glob([
        "**/experimental/*.scala",
    ],
    exclude = [
#        "**/codekata2016/All.scala",
    ]),
    deps = [
        "//common:syntax",
#        "//common:parser_syntax",
        "@maven//:co_fs2_fs2_core_2_13",
        "@maven//:com_beachape_enumeratum_2_13",
        "@maven//:com_codecommit_gll_combinators_2_13",
        "@maven//:dev_zio_zio_2_13",
        "@maven//:dev_zio_zio_streams_2_13",
        "@maven//:dev_zio_zio_interop_cats_2_13",
        "@maven//:io_circe_circe_core_2_13",
        "@maven//:io_circe_circe_parser_2_13",
        "@maven//:io_carpe_parseback_2_13",
        "@maven//:org_creativescala_doodle_2_13",
        "@maven//:org_creativescala_doodle_core_2_13",
        "@maven//:org_creativescala_doodle_image_2_13",
        "@maven//:org_creativescala_doodle_interact_2_13",
        "@maven//:org_creativescala_doodle_java2d_2_13",
        "@maven//:org_leibnizcenter_probabilistic_earley_parser",
        "@maven//:org_scalanlp_breeze_2_13",
        "@maven//:org_scala_lang_modules_scala_parser_combinators_2_13",
        "@maven//:org_typelevel_cats_core_2_13",
        "@maven//:org_typelevel_cats_effect_2_13",
    ],
)