load("//bazel/scala:rules.bzl", "scala_library")

scala_library(
    name = "experimental",
    srcs = glob(
        [
            "**/experimental/*.scala",
        ],
        exclude = [
            #        "**/codekata2016/All.scala",
        ],
    ),
    deps = [
        "//common:syntax",
        #        "//common:parser_syntax",
        "@maven//:co_fs2_fs2_core_2_13",
        "@maven//:com_beachape_enumeratum_2_13",
        "@maven//:com_codecommit_gll_combinators_2_13",
        "@maven//:dev_zio_zio_2_13",
        "@maven//:dev_zio_zio_interop_cats_2_13",
        "@maven//:dev_zio_zio_streams_2_13",
        "@maven//:io_carpe_parseback_2_13",
        "@maven//:io_circe_circe_core_2_13",
        "@maven//:io_circe_circe_parser_2_13",
        "@maven//:org_creativescala_doodle_2_13",
        "@maven//:org_creativescala_doodle_core_2_13",
        "@maven//:org_creativescala_doodle_image_2_13",
        "@maven//:org_creativescala_doodle_interact_2_13",
        "@maven//:org_creativescala_doodle_java2d_2_13",
        "@maven//:org_leibnizcenter_probabilistic_earley_parser",
        "@maven//:org_scalanlp_breeze_2_13",
        "@maven//:org_scala_lang_modules_scala_parser_combinators_2_13",
        "@maven//:org_typelevel_cats_core_2_13",
        "@maven//:org_typelevel_cats_effect_2_13",
    ],
)

scala_library(
    name = "category",
    srcs = glob(
        [
            "**/experimental/categories/*.scala",
        ],
        exclude = [
        ],
    ),
    deps = [
        "//common:syntax",
        "@maven//:co_fs2_fs2_core_2_13",
        "@maven//:com_beachape_enumeratum_2_13",
        "@maven//:com_codecommit_gll_combinators_2_13",
        "@maven//:dev_zio_zio_2_13",
        "@maven//:dev_zio_zio_interop_cats_2_13",
        "@maven//:dev_zio_zio_streams_2_13",
        "@maven//:io_carpe_parseback_2_13",
        "@maven//:io_circe_circe_core_2_13",
        "@maven//:io_circe_circe_parser_2_13",
        "@maven//:org_creativescala_doodle_2_13",
        "@maven//:org_creativescala_doodle_core_2_13",
        "@maven//:org_creativescala_doodle_image_2_13",
        "@maven//:org_creativescala_doodle_interact_2_13",
        "@maven//:org_creativescala_doodle_java2d_2_13",
        "@maven//:org_leibnizcenter_probabilistic_earley_parser",
        "@maven//:org_scala_lang_modules_scala_parser_combinators_2_13",
        "@maven//:org_scalanlp_breeze_2_13",
        "@maven//:org_typelevel_cats_core_2_13",
        "@maven//:org_typelevel_cats_effect_2_13",
    ],
)

scala_library(
    name = "kitchen_sink",
    srcs = glob(
        [
            "**/experimental/kitchen_sink/*.scala",
        ],
        exclude = [
            # "**/codekata2016/All.scala",
        ],
    ),
    deps = [
        "//common:syntax",
        # "//common:parser_syntax",
        "@maven//:co_fs2_fs2_core_2_13",
        "@maven//:com_beachape_enumeratum_2_13",
        "@maven//:com_codecommit_gll_combinators_2_13",
        "@maven//:com_thesamet_scalapb_lenses_2_13",
        "@maven//:com_thesamet_scalapb_scalapb_runtime_2_13",
        "@maven//:com_thesamet_scalapb_scalapb_runtime_grpc_2_13",
        "@maven//:dev_zio_zio_2_13",
        "@maven//:dev_zio_zio_config_2_13",
        "@maven//:dev_zio_zio_interop_cats_2_13",
        "@maven//:dev_zio_zio_json_2_13",
        "@maven//:dev_zio_zio_kafka_2_13",
        "@maven//:dev_zio_zio_logging_2_13",
        "@maven//:dev_zio_zio_opentracing_2_13",
        "@maven//:dev_zio_zio_optics_2_13",
        "@maven//:dev_zio_zio_s3_2_13",
        "@maven//:dev_zio_zio_streams_2_13",
        "@maven//:io_carpe_parseback_2_13",
        "@maven//:io_circe_circe_core_2_13",
        "@maven//:io_circe_circe_parser_2_13",
        "@maven//:io_getquill_quill_core_2_13",
        "@maven//:io_getquill_quill_jdbc_2_13",
        "@maven//:io_getquill_quill_jdbc_zio_2_13",
        "@maven//:io_github_kitlangton_zio_magic_2_13",
        "@maven//:org_creativescala_doodle_2_13",
        "@maven//:org_creativescala_doodle_core_2_13",
        "@maven//:org_creativescala_doodle_image_2_13",
        "@maven//:org_creativescala_doodle_interact_2_13",
        "@maven//:org_creativescala_doodle_java2d_2_13",
        "@maven//:org_leibnizcenter_probabilistic_earley_parser",
        "@maven//:org_scalanlp_breeze_2_13",
        "@maven//:org_scala_lang_modules_scala_parser_combinators_2_13",
        "@maven//:org_typelevel_cats_core_2_13",
        "@maven//:org_typelevel_cats_effect_2_13",
    ],
)
